# contextpool

./: .env.example  .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/: SUMMARY.md  introduction.md  roadmap.md  security.md
docs/getting-started/: first-insights.md  installation.md  quickstart.md
docs/ide-setup/: claude-code.md  cursor.md  other-ides.md
docs/reference/: cli.md  data-storage.md  environment-variables.md  mcp-tools.md
docs/team-sync/: commands.md  overview.md  setup.md
src/: aggregate.rs  cli.rs  cloud.rs  credentials.rs  embedded_agent.rs  init.rs  insight_filter.rs  install_cmd.rs  main.rs  mcp.rs  paths.rs  project.rs  redact.rs  scope.rs  summarize.rs  team.rs  transcript.rs
src/export/: claude_code.rs  codex.rs  cursor.rs  kiro.rs  mod.rs  vscdb.rs
